# ofipensiones

./: BAREMETAL.md  README.md  pyproject.toml
docker/nginx/: Dockerfile  nginx.conf
ofipensiones/payments/: admin.py  models.py  serializers.py  urls.py  views.py
test/load/: locustfile.py
